tests/datakinds/should_fail/DataKind6.hs
{-# LANGUAGE DataKinds #-}

module DataKind6 where

-- how should this be caught?
data kind K = K
